# golangApp/main.go
@@ -3,8 +3,9 @@ package main
 import (
 	"net/http"
 
-	"github.com/Khaled-Abdelal/chats-challenge/golangApp/chat"
+	"github.com/Khaled-Abdelal/chats-challenge/golangApp/chats"
 	"github.com/Khaled-Abdelal/chats-challenge/golangApp/common"
+	"github.com/Khaled-Abdelal/chats-challenge/golangApp/messages"
 	"github.com/gin-gonic/gin"
 )
 
@@ -17,7 +18,8 @@ func main() {
 
 	r.GET("/", ping)
 
-	r.POST("/applications/:token/chats", chat.CreateChat)
+	r.POST("/applications/:token/chats", chats.CreateChat)
+	r.POST("/applications/:token/chats/:number/messages", messages.CreateMessage)
 	r.Run(common.GetServerPort()) // listen and serve
 }
 
